Bug 1674464 - Stop adding entries for about:tabcrashed when SHIP is enabled. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D96383